# personal_locker

./: README.md  package-lock.json  package.json
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Aside.svelte  CodeMirror.svelte
src/routes/: +layout.svelte  +page.svelte
